--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,7 +5,7 @@ $mdi-font-weight:      "normal";
 $mdi-font-path:        "../fonts" !default;
 $mdi-font-size-base:   24px !default;
 $mdi-css-prefix:       mdi !default;
-$mdi-version:          "4.6.95" !default;
+$mdi-version:          "4.7.95" !default;
 
 $mdi-icons: (
   "ab-testing": F001C,
@@ -145,6 +145,7 @@ $mdi-icons: (
   "align-vertical-center": F01F1,
   "align-vertical-top": F01F2,
   "all-inclusive": F6BD,
+  "allergy": F0283,
   "alpha": F02B,
   "alpha-a": 0041,
   "alpha-a-box": FAED,
@@ -330,6 +331,10 @@ $mdi-icons: (
   "apps-box": FD22,
   "arch": F8C6,
   "archive": F03C,
+  "archive-arrow-down": F0284,
+  "archive-arrow-down-outline": F0285,
+  "archive-arrow-up": F0286,
+  "archive-arrow-up-outline": F0287,
   "archive-outline": F0239,
   "arm-flex": F008F,
   "arm-flex-outline": F0090,
@@ -577,6 +582,9 @@ $mdi-icons: (
   "battery-charging-70": F89D,
   "battery-charging-80": F08A,
   "battery-charging-90": F08B,
+  "battery-charging-high": F02D1,
+  "battery-charging-low": F02CF,
+  "battery-charging-medium": F02D0,
   "battery-charging-outline": F89E,
   "battery-charging-wireless": F806,
   "battery-charging-wireless-10": F807,
@@ -593,8 +601,13 @@ $mdi-icons: (
   "battery-heart": F023A,
   "battery-heart-outline": F023B,
   "battery-heart-variant": F023C,
+  "battery-high": F02CE,
+  "battery-low": F02CC,
+  "battery-medium": F02CD,
   "battery-minus": F08C,
   "battery-negative": F08D,
+  "battery-off": F0288,
+  "battery-off-outline": F0289,
   "battery-outline": F08E,
   "battery-plus": F08F,
   "battery-positive": F090,
@@ -723,6 +736,7 @@ $mdi-icons: (
   "bookmark-plus": F0C5,
   "bookmark-plus-outline": F0C4,
   "bookmark-remove": F0C6,
+  "bookshelf": F028A,
   "boom-gate": FEA3,
   "boom-gate-alert": FEA4,
   "boom-gate-alert-outline": FEA5,
@@ -1007,9 +1021,12 @@ $mdi-icons: (
   "cash": F114,
   "cash-100": F115,
   "cash-marker": FD94,
+  "cash-minus": F028B,
   "cash-multiple": F116,
+  "cash-plus": F028C,
   "cash-refund": FA9B,
   "cash-register": FCD0,
+  "cash-remove": F028D,
   "cash-usd": F01A1,
   "cash-usd-outline": F117,
   "cassette": F9D3,
@@ -1117,6 +1134,7 @@ $mdi-icons: (
   "checkerboard-minus": F022D,
   "checkerboard-plus": F022C,
   "checkerboard-remove": F022E,
+  "cheese": F02E4,
   "chef-hat": FB58,
   "chemical-weapon": F13B,
   "chess-bishop": F85B,
@@ -1196,18 +1214,28 @@ $mdi-icons: (
   "clipboard-arrow-up": FC33,
   "clipboard-arrow-up-outline": FC34,
   "clipboard-check": F14C,
+  "clipboard-check-multiple": F028E,
+  "clipboard-check-multiple-outline": F028F,
   "clipboard-check-outline": F8A7,
+  "clipboard-file": F0290,
+  "clipboard-file-outline": F0291,
   "clipboard-flow": F6C7,
   "clipboard-flow-outline": F0142,
   "clipboard-list": F00FF,
   "clipboard-list-outline": F0100,
+  "clipboard-multiple": F0292,
+  "clipboard-multiple-outline": F0293,
   "clipboard-outline": F14D,
   "clipboard-play": FC35,
+  "clipboard-play-multiple": F0294,
+  "clipboard-play-multiple-outline": F0295,
   "clipboard-play-outline": FC36,
   "clipboard-plus": F750,
   "clipboard-pulse": F85C,
   "clipboard-pulse-outline": F85D,
   "clipboard-text": F14E,
+  "clipboard-text-multiple": F0296,
+  "clipboard-text-multiple-outline": F0297,
   "clipboard-text-outline": FA37,
   "clipboard-text-play": FC37,
   "clipboard-text-play-outline": FC38,
@@ -2068,6 +2096,8 @@ $mdi-icons: (
   "folder-key-outline": F0117,
   "folder-lock": F250,
   "folder-lock-open": F251,
+  "folder-marker": F0298,
+  "folder-marker-outline": F0299,
   "folder-move": F252,
   "folder-move-outline": F0271,
   "folder-multiple": F253,
@@ -2170,6 +2200,7 @@ $mdi-icons: (
   "format-list-checks": F755,
   "format-list-numbered": F27B,
   "format-list-numbered-rtl": FCE9,
+  "format-list-text": F029A,
   "format-overline": FED0,
   "format-page-break": F6D6,
   "format-paint": F27C,
@@ -2307,6 +2338,8 @@ $mdi-icons: (
   "gesture-swipe-up": F73F,
   "gesture-swipe-vertical": FABF,
   "gesture-tap": F740,
+  "gesture-tap-box": F02D4,
+  "gesture-tap-button": F02D3,
   "gesture-tap-hold": FD53,
   "gesture-two-double-tap": F741,
   "gesture-two-tap": F742,
@@ -2460,6 +2493,7 @@ $mdi-icons: (
   "help-network-outline": FC66,
   "help-rhombus": FB81,
   "help-rhombus-outline": FB82,
+  "hexadecimal": F02D2,
   "hexagon": F2D8,
   "hexagon-multiple": F6E0,
   "hexagon-multiple-outline": F011D,
@@ -2608,9 +2642,14 @@ $mdi-icons: (
   "import": F2FA,
   "inbox": F686,
   "inbox-arrow-down": F2FB,
+  "inbox-arrow-down-outline": F029B,
   "inbox-arrow-up": F3D1,
+  "inbox-arrow-up-outline": F029C,
+  "inbox-full": F029D,
+  "inbox-full-outline": F029E,
   "inbox-multiple": F8AF,
   "inbox-multiple-outline": FB84,
+  "inbox-outline": F029F,
   "incognito": F5F9,
   "infinity": F6E3,
   "information": F2FC,
@@ -2658,6 +2697,19 @@ $mdi-icons: (
   "keyboard-backspace": F30D,
   "keyboard-caps": F30E,
   "keyboard-close": F30F,
+  "keyboard-esc": F02E2,
+  "keyboard-f1": F02D6,
+  "keyboard-f10": F02DF,
+  "keyboard-f11": F02E0,
+  "keyboard-f12": F02E1,
+  "keyboard-f2": F02D7,
+  "keyboard-f3": F02D8,
+  "keyboard-f4": F02D9,
+  "keyboard-f5": F02DA,
+  "keyboard-f6": F02DB,
+  "keyboard-f7": F02DC,
+  "keyboard-f8": F02DD,
+  "keyboard-f9": F02DE,
   "keyboard-off": F310,
   "keyboard-off-outline": FE8C,
   "keyboard-outline": F97A,
@@ -2684,6 +2736,7 @@ $mdi-icons: (
   "lambda": F627,
   "lamp": F6B4,
   "lan": F317,
+  "lan-check": F02D5,
   "lan-connect": F318,
   "lan-disconnect": F319,
   "lan-pending": F31A,
@@ -2757,6 +2810,7 @@ $mdi-icons: (
   "lightbulb": F335,
   "lightbulb-cfl": F0233,
   "lightbulb-cfl-off": F0234,
+  "lightbulb-cfl-spiral": F02A0,
   "lightbulb-group": F027E,
   "lightbulb-group-outline": F027F,
   "lightbulb-multiple": F0280,
@@ -2826,6 +2880,7 @@ $mdi-icons: (
   "magnify-plus-outline": F6EC,
   "magnify-remove-cursor": F0237,
   "magnify-remove-outline": F0238,
+  "magnify-scan": F02A1,
   "mail": FED8,
   "mail-ru": F34C,
   "mailbox": F6ED,
@@ -2851,6 +2906,7 @@ $mdi-icons: (
   "map-marker-down": F012D,
   "map-marker-minus": F650,
   "map-marker-multiple": F350,
+  "map-marker-multiple-outline": F02A2,
   "map-marker-off": F351,
   "map-marker-outline": F7D8,
   "map-marker-path": FCFC,
@@ -3343,6 +3399,7 @@ $mdi-icons: (
   "pentagon": F6FF,
   "pentagon-outline": F700,
   "percent": F3F0,
+  "percent-outline": F02A3,
   "periodic-table": F8B5,
   "periodic-table-co2": F7E3,
   "periscope": F747,
@@ -3359,6 +3416,7 @@ $mdi-icons: (
   "phone-check": F01D4,
   "phone-check-outline": F01D5,
   "phone-classic": F602,
+  "phone-classic-off": F02A4,
   "phone-forward": F3F4,
   "phone-forward-outline": F01BC,
   "phone-hangup": F3F5,
@@ -3429,6 +3487,7 @@ $mdi-icons: (
   "piston": F889,
   "pizza": F409,
   "play": F40A,
+  "play-box": F02A5,
   "play-box-outline": F40B,
   "play-circle": F40C,
   "play-circle-outline": F40D,
@@ -3479,6 +3538,7 @@ $mdi-icons: (
   "police-badge-outline": F0193,
   "poll": F41F,
   "poll-box": F420,
+  "poll-box-outline": F02A6,
   "polymer": F421,
   "pool": F606,
   "popcorn": F422,
@@ -3702,6 +3762,8 @@ $mdi-icons: (
   "sack": FD0A,
   "sack-percent": FD0B,
   "safe": FA69,
+  "safe-square": F02A7,
+  "safe-square-outline": F02A8,
   "safety-goggles": FD0C,
   "sailing": FEE5,
   "sale": F46F,
@@ -3725,6 +3787,8 @@ $mdi-icons: (
   "school-outline": F01AB,
   "scissors-cutting": FA6A,
   "scooter": F0214,
+  "scoreboard": F02A9,
+  "scoreboard-outline": F02AA,
   "screen-rotation": F475,
   "screen-rotation-lock": F476,
   "screw-flat-top": FDCF,
@@ -3765,6 +3829,9 @@ $mdi-icons: (
   "select-drag": FA6B,
   "select-group": FF9F,
   "select-inverse": F487,
+  "select-marker": F02AB,
+  "select-multiple": F02AC,
+  "select-multiple-marker": F02AD,
   "select-off": F488,
   "select-place": FFFB,
   "select-search": F022F,
@@ -3772,6 +3839,9 @@ $mdi-icons: (
   "selection-drag": FA6C,
   "selection-ellipse": FD0E,
   "selection-ellipse-arrow-inside": FF3F,
+  "selection-marker": F02AE,
+  "selection-multiple-marker": F02AF,
+  "selection-mutliple": F02B0,
   "selection-off": F776,
   "selection-search": F0230,
   "send": F48A,
@@ -4044,6 +4114,8 @@ $mdi-icons: (
   "standard-definition": F7EE,
   "star": F4CE,
   "star-box": FA72,
+  "star-box-multiple": F02B1,
+  "star-box-multiple-outline": F02B2,
   "star-box-outline": FA73,
   "star-circle": F4CF,
   "star-circle-outline": F9A3,
@@ -4080,6 +4152,8 @@ $mdi-icons: (
   "strava": FB25,
   "stretch-to-page": FF48,
   "stretch-to-page-outline": FF49,
+  "string-lights": F02E5,
+  "string-lights-off": F02E6,
   "subdirectory-arrow-left": F60C,
   "subdirectory-arrow-right": F60D,
   "subtitles": FA15,
@@ -4289,10 +4363,23 @@ $mdi-icons: (
   "toothbrush-paste": F0155,
   "tor": F52A,
   "tortoise": FD17,
+  "toslink": F02E3,
   "tournament": F9AD,
   "tower-beach": F680,
   "tower-fire": F681,
   "towing": F83B,
+  "toy-brick": F02B3,
+  "toy-brick-marker": F02B4,
+  "toy-brick-marker-outline": F02B5,
+  "toy-brick-minus": F02B6,
+  "toy-brick-minus-outline": F02B7,
+  "toy-brick-outline": F02B8,
+  "toy-brick-plus": F02B9,
+  "toy-brick-plus-outline": F02BA,
+  "toy-brick-remove": F02BB,
+  "toy-brick-remove-outline": F02BC,
+  "toy-brick-search": F02BD,
+  "toy-brick-search-outline": F02BE,
   "track-light": F913,
   "trackpad": F7F7,
   "trackpad-lock": F932,
@@ -4322,6 +4409,12 @@ $mdi-icons: (
   "transmission-tower": FD1A,
   "trash-can": FA78,
   "trash-can-outline": FA79,
+  "tray": F02BF,
+  "tray-alert": F02C0,
+  "tray-full": F02C1,
+  "tray-minus": F02C2,
+  "tray-plus": F02C3,
+  "tray-remove": F02C4,
   "treasure-chest": F725,
   "tree": F531,
   "tree-outline": FE4C,
@@ -4340,8 +4433,12 @@ $mdi-icons: (
   "trophy-variant-outline": F53C,
   "truck": F53D,
   "truck-check": FCB0,
+  "truck-check-outline": F02C5,
   "truck-delivery": F53E,
+  "truck-delivery-outline": F02C6,
   "truck-fast": F787,
+  "truck-fast-outline": F02C7,
+  "truck-outline": F02C8,
   "truck-trailer": F726,
   "trumpet": F00C1,
   "tshirt-crew": FA7A,
@@ -4396,6 +4493,8 @@ $mdi-icons: (
   "upload-off-outline": F00F2,
   "upload-outline": FE67,
   "usb": F553,
+  "usb-flash-drive": F02C9,
+  "usb-flash-drive-outline": F02CA,
   "usb-port": F021B,
   "valve": F0088,
   "valve-closed": F0089,
@@ -4549,6 +4648,7 @@ $mdi-icons: (
   "water-off": F58D,
   "water-outline": FE6A,
   "water-percent": F58E,
+  "water-polo": F02CB,
   "water-pump": F58F,
   "water-pump-off": FFB0,
   "water-well": F008D,
