--- a/scss/_path.scss
+++ b/scss/_path.scss
@@ -1,5 +1,6 @@
 @font-face {
   font-family: '#{$mdi-font-name}';
+  src: local('Material Design Icons');
   src: url('#{$mdi-font-path}/#{$mdi-filename}-webfont.eot?v=#{$mdi-version}');
   src: url('#{$mdi-font-path}/#{$mdi-filename}-webfont.eot?#iefix&v=#{$mdi-version}') format('embedded-opentype'),
     url('#{$mdi-font-path}/#{$mdi-filename}-webfont.woff2?v=#{$mdi-version}') format('woff2'),
