--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,7 +5,7 @@ $mdi-font-weight:      "normal";
 $mdi-font-path:        "../fonts" !default;
 $mdi-font-size-base:   24px !default;
 $mdi-css-prefix:       mdi !default;
-$mdi-version:          "5.0.45" !default;
+$mdi-version:          "5.1.45" !default;
 
 $mdi-icons: (
   "ab-testing": F01C9,
@@ -481,6 +481,7 @@ $mdi-icons: (
   "axe": F08C8,
   "axis": F0D48,
   "axis-arrow": F0D49,
+  "axis-arrow-info": F140E,
   "axis-arrow-lock": F0D4A,
   "axis-lock": F0D4B,
   "axis-x-arrow": F0D4C,
@@ -500,6 +501,7 @@ $mdi-icons: (
   "baby": F006C,
   "baby-bottle": F0F39,
   "baby-bottle-outline": F0F3A,
+  "baby-buggy": F13E0,
   "baby-carriage": F068F,
   "baby-carriage-off": F0FA0,
   "baby-face": F0E7C,
@@ -657,21 +659,28 @@ $mdi-icons: (
   "bed-single-outline": F106E,
   "bee": F0FA1,
   "bee-flower": F0FA2,
+  "beehive-off-outline": F13ED,
   "beehive-outline": F10CE,
   "beer": F0098,
   "beer-outline": F130C,
   "bell": F009A,
   "bell-alert": F0D59,
   "bell-alert-outline": F0E81,
+  "bell-cancel": F13E7,
+  "bell-cancel-outline": F13E8,
   "bell-check": F11E5,
   "bell-check-outline": F11E6,
   "bell-circle": F0D5A,
   "bell-circle-outline": F0D5B,
+  "bell-minus": F13E9,
+  "bell-minus-outline": F13EA,
   "bell-off": F009B,
   "bell-off-outline": F0A91,
   "bell-outline": F009C,
   "bell-plus": F009D,
   "bell-plus-outline": F0A92,
+  "bell-remove": F13EB,
+  "bell-remove-outline": F13EC,
   "bell-ring": F009E,
   "bell-ring-outline": F009F,
   "bell-sleep": F00A0,
@@ -852,6 +861,8 @@ $mdi-icons: (
   "brightness-percent": F0CF2,
   "broom": F00E2,
   "brush": F00E3,
+  "bucket": F1415,
+  "bucket-outline": F1416,
   "buddhism": F094B,
   "buffer": F0619,
   "buffet": F0578,
@@ -989,6 +1000,7 @@ $mdi-icons: (
   "car-brake-retarder": F1017,
   "car-child-seat": F0FA3,
   "car-clutch": F1018,
+  "car-cog": F13CC,
   "car-connected": F010D,
   "car-convertible": F07A7,
   "car-coolant-level": F1019,
@@ -1014,6 +1026,7 @@ $mdi-icons: (
   "car-seat": F0FA4,
   "car-seat-cooler": F0FA5,
   "car-seat-heater": F0FA6,
+  "car-settings": F13CD,
   "car-shift-pattern": F0F40,
   "car-side": F07AB,
   "car-sports": F07AC,
@@ -1148,9 +1161,15 @@ $mdi-icons: (
   "chat": F0B79,
   "chat-alert": F0B7A,
   "chat-alert-outline": F12C9,
+  "chat-minus": F1410,
+  "chat-minus-outline": F1413,
   "chat-outline": F0EDE,
+  "chat-plus": F140F,
+  "chat-plus-outline": F1412,
   "chat-processing": F0B7B,
   "chat-processing-outline": F12CA,
+  "chat-remove": F1411,
+  "chat-remove-outline": F1414,
   "chat-sleep": F12D1,
   "chat-sleep-outline": F12D2,
   "check": F012C,
@@ -1192,6 +1211,7 @@ $mdi-icons: (
   "checkerboard-plus": F1201,
   "checkerboard-remove": F1203,
   "cheese": F12B9,
+  "cheese-off": F13EE,
   "chef-hat": F0B7C,
   "chemical-weapon": F013B,
   "chess-bishop": F085C,
@@ -1386,6 +1406,8 @@ $mdi-icons: (
   "cog-box": F0494,
   "cog-clockwise": F11DD,
   "cog-counterclockwise": F11DE,
+  "cog-off": F13CE,
+  "cog-off-outline": F13CF,
   "cog-outline": F08BB,
   "cog-transfer": F105B,
   "cog-transfer-outline": F105C,
@@ -1479,6 +1501,7 @@ $mdi-icons: (
   "copyright": F05E6,
   "cordova": F0958,
   "corn": F07B8,
+  "corn-off": F13EF,
   "counter": F0199,
   "cow": F019A,
   "cpu-32-bit": F0EDF,
@@ -1487,6 +1510,8 @@ $mdi-icons: (
   "creation": F0674,
   "creative-commons": F0D6B,
   "credit-card": F0FEF,
+  "credit-card-check": F13D0,
+  "credit-card-check-outline": F13D1,
   "credit-card-clock": F0EE1,
   "credit-card-clock-outline": F0EE2,
   "credit-card-marker": F06A8,
@@ -1765,10 +1790,19 @@ $mdi-icons: (
   "earth": F01E7,
   "earth-arrow-right": F1311,
   "earth-box": F06CD,
+  "earth-box-minus": F1407,
   "earth-box-off": F06CE,
+  "earth-box-plus": F1406,
+  "earth-box-remove": F1408,
+  "earth-minus": F1404,
   "earth-off": F01E8,
+  "earth-plus": F1403,
+  "earth-remove": F1405,
   "egg": F0AAF,
   "egg-easter": F0AB0,
+  "egg-off": F13F0,
+  "egg-off-outline": F13F1,
+  "egg-outline": F13F2,
   "eight-track": F09EA,
   "eject": F01EA,
   "eject-outline": F0B91,
@@ -1799,6 +1833,8 @@ $mdi-icons: (
   "email-multiple": F0EE7,
   "email-multiple-outline": F0EE8,
   "email-newsletter": F0FB1,
+  "email-off": F13E3,
+  "email-off-outline": F13E4,
   "email-open": F01EF,
   "email-open-multiple": F0EE9,
   "email-open-multiple-outline": F0EEA,
@@ -1902,6 +1938,10 @@ $mdi-icons: (
   "eye-settings": F086D,
   "eye-settings-outline": F086E,
   "eyedropper": F020A,
+  "eyedropper-minus": F13DD,
+  "eyedropper-off": F13DF,
+  "eyedropper-plus": F13DC,
+  "eyedropper-remove": F13DE,
   "eyedropper-variant": F020B,
   "face": F0643,
   "face-agent": F0D70,
@@ -2036,6 +2076,7 @@ $mdi-icons: (
   "file-table-box-outline": F10E4,
   "file-table-outline": F0C7F,
   "file-tree": F0645,
+  "file-tree-outline": F13D2,
   "file-undo": F08DC,
   "file-undo-outline": F103C,
   "file-upload": F0A4D,
@@ -2081,6 +2122,7 @@ $mdi-icons: (
   "fireplace-off": F0E2F,
   "firework": F0E30,
   "fish": F023A,
+  "fish-off": F13F3,
   "fishbowl": F0EF3,
   "fishbowl-outline": F0EF4,
   "fit-to-page": F0EF5,
@@ -2112,6 +2154,8 @@ $mdi-icons: (
   "flask-empty": F0094,
   "flask-empty-minus": F123A,
   "flask-empty-minus-outline": F123B,
+  "flask-empty-off": F13F4,
+  "flask-empty-off-outline": F13F5,
   "flask-empty-outline": F0095,
   "flask-empty-plus": F123C,
   "flask-empty-plus-outline": F123D,
@@ -2119,6 +2163,8 @@ $mdi-icons: (
   "flask-empty-remove-outline": F123F,
   "flask-minus": F1240,
   "flask-minus-outline": F1241,
+  "flask-off": F13F6,
+  "flask-off-outline": F13F7,
   "flask-outline": F0096,
   "flask-plus": F1242,
   "flask-plus-outline": F1243,
@@ -2202,6 +2248,8 @@ $mdi-icons: (
   "folder-settings": F107D,
   "folder-settings-outline": F107E,
   "folder-star": F069D,
+  "folder-star-multiple": F13D3,
+  "folder-star-multiple-outline": F13D4,
   "folder-star-outline": F0B9F,
   "folder-swap": F0FB6,
   "folder-swap-outline": F0FB7,
@@ -2223,11 +2271,18 @@ $mdi-icons: (
   "food-fork-drink": F05F2,
   "food-off": F05F3,
   "food-variant": F025C,
+  "food-variant-off": F13E5,
   "foot-print": F0F52,
   "football": F025D,
   "football-australian": F025E,
   "football-helmet": F025F,
   "forklift": F07C9,
+  "form-dropdown": F1400,
+  "form-select": F1401,
+  "form-textarea": F1095,
+  "form-textbox": F060E,
+  "form-textbox-lock": F135D,
+  "form-textbox-password": F07F5,
   "format-align-bottom": F0753,
   "format-align-center": F0260,
   "format-align-justify": F0261,
@@ -2343,7 +2398,9 @@ $mdi-icons: (
   "fridge-outline": F028F,
   "fridge-top": F0291,
   "fruit-cherries": F1042,
+  "fruit-cherries-off": F13F8,
   "fruit-citrus": F1043,
+  "fruit-citrus-off": F13F9,
   "fruit-grapes": F1044,
   "fruit-grapes-outline": F1045,
   "fruit-pineapple": F1046,
@@ -2388,6 +2445,8 @@ $mdi-icons: (
   "garage-variant": F12D3,
   "gas-cylinder": F0647,
   "gas-station": F0298,
+  "gas-station-off": F1409,
+  "gas-station-off-outline": F140A,
   "gas-station-outline": F0EB8,
   "gate": F0299,
   "gate-and": F08E1,
@@ -2661,10 +2720,13 @@ $mdi-icons: (
   "home-lock-open": F08EC,
   "home-map-marker": F05F8,
   "home-minus": F0974,
+  "home-minus-outline": F13D5,
   "home-modern": F02DD,
   "home-outline": F06A1,
   "home-plus": F0975,
+  "home-plus-outline": F13D6,
   "home-remove": F1247,
+  "home-remove-outline": F13D7,
   "home-roof": F112B,
   "home-search": F13B0,
   "home-search-outline": F13B1,
@@ -2749,6 +2811,7 @@ $mdi-icons: (
   "image-filter-tilt-shift": F02F7,
   "image-filter-vintage": F02F8,
   "image-frame": F0E49,
+  "image-minus": F1419,
   "image-move": F09F8,
   "image-multiple": F02F9,
   "image-multiple-outline": F02EF,
@@ -2756,6 +2819,7 @@ $mdi-icons: (
   "image-off-outline": F11D1,
   "image-outline": F0976,
   "image-plus": F087C,
+  "image-remove": F1418,
   "image-search": F0977,
   "image-search-outline": F0978,
   "image-size-select-actual": F0C8D,
@@ -2960,6 +3024,8 @@ $mdi-icons: (
   "lightbulb-outline": F0336,
   "lighthouse": F09FF,
   "lighthouse-on": F0A00,
+  "lightning-bolt": F140B,
+  "lightning-bolt-outline": F140C,
   "link": F0337,
   "link-box": F0D1A,
   "link-box-outline": F0D1B,
@@ -3266,6 +3332,8 @@ $mdi-icons: (
   "multiplication": F0382,
   "multiplication-box": F0383,
   "mushroom": F07DF,
+  "mushroom-off": F13FA,
+  "mushroom-off-outline": F13FB,
   "mushroom-outline": F07E0,
   "music": F075A,
   "music-accidental-double-flat": F0F69,
@@ -3514,6 +3582,7 @@ $mdi-icons: (
   "page-next-outline": F0BB1,
   "page-previous": F0BB2,
   "page-previous-outline": F0BB3,
+  "pail": F1417,
   "palette": F03D8,
   "palette-advanced": F03D9,
   "palette-outline": F0E0C,
@@ -3681,6 +3750,7 @@ $mdi-icons: (
   "play": F040A,
   "play-box": F127A,
   "play-box-multiple": F0D19,
+  "play-box-multiple-outline": F13E6,
   "play-box-outline": F040B,
   "play-circle": F040C,
   "play-circle-outline": F040D,
@@ -3796,6 +3866,7 @@ $mdi-icons: (
   "protocol": F0FD8,
   "publish": F06A7,
   "pulse": F0430,
+  "pump": F1402,
   "pumpkin": F0BBF,
   "purse": F0F1C,
   "purse-outline": F0F1D,
@@ -3982,6 +4053,7 @@ $mdi-icons: (
   "scale-balance": F05D1,
   "scale-bathroom": F0473,
   "scale-off": F105A,
+  "scan-helper": F13D8,
   "scanner": F06AB,
   "scanner-off": F090A,
   "scatter-plot": F0EC9,
@@ -4023,6 +4095,8 @@ $mdi-icons: (
   "security": F0483,
   "security-network": F0484,
   "seed": F0E62,
+  "seed-off": F13FD,
+  "seed-off-outline": F13FE,
   "seed-outline": F0E63,
   "segment": F0ECB,
   "select": F0485,
@@ -4043,8 +4117,8 @@ $mdi-icons: (
   "selection-ellipse": F0D32,
   "selection-ellipse-arrow-inside": F0F22,
   "selection-marker": F1283,
+  "selection-multiple": F1285,
   "selection-multiple-marker": F1284,
-  "selection-mutliple": F1285,
   "selection-off": F0777,
   "selection-search": F1205,
   "semantic-web": F1316,
@@ -4103,6 +4177,8 @@ $mdi-icons: (
   "shield-airplane-outline": F0CC7,
   "shield-alert": F0ECC,
   "shield-alert-outline": F0ECD,
+  "shield-bug": F13DA,
+  "shield-bug-outline": F13DB,
   "shield-car": F0F83,
   "shield-check": F0565,
   "shield-check-outline": F0CC8,
@@ -4242,6 +4318,7 @@ $mdi-icons: (
   "smoke-detector": F0392,
   "smoking": F04B4,
   "smoking-off": F04B5,
+  "smoking-pipe": F140D,
   "snapchat": F04B6,
   "snowboard": F1307,
   "snowflake": F0717,
@@ -4295,6 +4372,7 @@ $mdi-icons: (
   "source-repository": F0CCF,
   "source-repository-multiple": F0CD0,
   "soy-sauce": F07EE,
+  "soy-sauce-off": F13FC,
   "spa": F0CD1,
   "spa-outline": F0CD2,
   "space-invaders": F0BC9,
@@ -4443,8 +4521,18 @@ $mdi-icons: (
   "tab-remove": F0B4C,
   "tab-unselected": F04EA,
   "table": F04EB,
+  "table-account": F13B9,
+  "table-alert": F13BA,
+  "table-arrow-down": F13BB,
+  "table-arrow-left": F13BC,
+  "table-arrow-right": F13BD,
+  "table-arrow-up": F13BE,
   "table-border": F0A18,
+  "table-cancel": F13BF,
   "table-chair": F1061,
+  "table-check": F13C0,
+  "table-clock": F13C1,
+  "table-cog": F13C2,
   "table-column": F0835,
   "table-column-plus-after": F04EC,
   "table-column-plus-before": F04ED,
@@ -4452,14 +4540,22 @@ $mdi-icons: (
   "table-column-width": F04EF,
   "table-edit": F04F0,
   "table-eye": F1094,
+  "table-eye-off": F13C3,
   "table-furniture": F05BC,
   "table-headers-eye": F121D,
   "table-headers-eye-off": F121E,
+  "table-heart": F13C4,
+  "table-key": F13C5,
   "table-large": F04F1,
   "table-large-plus": F0F87,
   "table-large-remove": F0F88,
+  "table-lock": F13C6,
   "table-merge-cells": F09A6,
+  "table-minus": F13C7,
+  "table-multiple": F13C8,
+  "table-network": F13C9,
   "table-of-contents": F0836,
+  "table-off": F13CA,
   "table-plus": F0A75,
   "table-refresh": F13A0,
   "table-remove": F0A76,
@@ -4470,6 +4566,7 @@ $mdi-icons: (
   "table-row-remove": F04F5,
   "table-search": F090F,
   "table-settings": F0838,
+  "table-star": F13CB,
   "table-sync": F13A1,
   "table-tennis": F0E68,
   "tablet": F04F6,
@@ -4495,6 +4592,7 @@ $mdi-icons: (
   "tag-remove-outline": F1223,
   "tag-text": F1224,
   "tag-text-outline": F04FD,
+  "tailwind": F13FF,
   "tank": F0D3A,
   "tanker-truck": F0FE5,
   "tape-measure": F0B4D,
@@ -4546,15 +4644,12 @@ $mdi-icons: (
   "text-box-search": F0EAE,
   "text-box-search-outline": F0EAF,
   "text-recognition": F113D,
+  "text-search": F13B8,
   "text-shadow": F0669,
   "text-short": F09A9,
   "text-subject": F09AA,
   "text-to-speech": F050A,
   "text-to-speech-off": F050B,
-  "textarea": F1095,
-  "textbox": F060E,
-  "textbox-lock": F135D,
-  "textbox-password": F07F5,
   "texture": F050C,
   "texture-box": F0FE6,
   "theater": F050D,
@@ -4740,6 +4835,8 @@ $mdi-icons: (
   "umbraco": F0549,
   "umbrella": F054A,
   "umbrella-closed": F09B0,
+  "umbrella-closed-outline": F13E2,
+  "umbrella-closed-variant": F13E1,
   "umbrella-outline": F054B,
   "undo": F054C,
   "undo-variant": F054D,
@@ -4807,6 +4904,7 @@ $mdi-icons: (
   "vibrate-off": F0CD9,
   "video": F0567,
   "video-3d": F07FD,
+  "video-3d-off": F13D9,
   "video-3d-variant": F0ED1,
   "video-4k-box": F083E,
   "video-account": F0919,
@@ -4862,6 +4960,8 @@ $mdi-icons: (
   "vimeo": F0577,
   "violin": F060F,
   "virtual-reality": F0894,
+  "virus": F13B6,
+  "virus-outline": F13B7,
   "vk": F0579,
   "vlc": F057C,
   "voice-off": F0ED4,
